# ms-selectivity-feature

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: directories.cfg
data/: README.md
data/human_sample/: sample_1_EyeMessageList.mat  sample_1_EyePositionList.mat  sample_1_TaskData.mat
ms_selectivity_feature/: README.md  __init__.py  blink_detector.py  detect_microsaccades.py  detect_saccades.py  preprocess.py  utils.py
scripts/: README.md  blink_detector.py  detect_microsaccades.py  detect_saccades.py  glitch_detector.py  postprocess.py  preprocess.py  utils.py
src/: __init__.py  blink_detector.py  detect_microsaccades.py  detect_saccades.py  glitch_detector.py  logger.py  postprocess.py  preprocess.py  utils.py
tests/: test_blink_detector.py  test_detect_saccades.py  test_glitch_detector.py  test_postprocess.py  test_preprocess.py  test_utils.py
